--- a/src/Components/NavComp/Nav.css
+++ b/src/Components/NavComp/Nav.css
@@ -1,35 +1,55 @@
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 90px;
+  font-weight: 600;
+  /* line-height: 1.7; */
   background: #ffffff;
 }
 nav ul {
   display: flex;
+  margin: 160px;
 }
 .nav-icon a {
-  color: royalblue;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 15px bold;
   color: #233c4c;
-  font-family: "SegoeUI-Semibold";
   cursor: pointer;
 }
-.nav-icon button {
+.nav-icon-button {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+.nav-icon1 button {
+  cursor: pointer;
+  align-items: center;
+  font-size: 12px;
+  color: #fff;
+  display: flex;
+  background-color: #be2664;
+  border: 1px solid #be2664;
+  border-radius: 30px;
+  padding: 10px 25px;
+  margin-right: 10px;
+  transition: all 0.3s ease-out;
+}
+.nav-icon1 button:hover {
+  background-color: #fff;
+  color: #be2664;
+}
+
+.nav-icon2 button {
   cursor: pointer;
   font-size: 12px;
   background-color: #fff;
   border: 1px solid #183c60;
   border-radius: 30px;
-  font-family: "SegoeUI-Semibold";
-  padding: 8px 25px;
+  padding: 10px 25px;
   transition: all 0.3s ease-out;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
 }
-.nav-icon button:hover {
+.nav-icon2 button:hover {
   background-color: #183c60;
   color: #fff;
 }
@@ -39,16 +59,10 @@ nav ul {
 .nav-icon {
   display: flex;
   align-self: center;
-  padding: 30px 40px 20px 30px;
+  padding: 0px 20px 0px 20px;
 }
 .nav-logo {
-  font-size: 10px;
-  margin-right: 105px;
-  object-fit: contain;
-  max-width: 100%;
-  vertical-align: middle;
-  border-style: none;
-  padding-left: 10px;
+  margin-right: 20px;
 }
 .active {
   font-weight: bold;
